<resources>
    <string name="app_name">ANTS</string>
    <string name="enter_username">Email</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_up_page">SignUpPage</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="enter_dob">Date Of Birth</string>
    <string name="enter_location">"Location (Optional)"</string>
    <string name="enter_phone_num">"Phone number (Optional)"</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <string name="updateApp">"Please update this app."</string>
    <string name="networkError">"There was a network error. Please try again later."</string>

    <string name="question_pop_up">"Please wait for question to pop up"</string>

    <string name="check_box">check box</string>
    <string name="wrong_box">wrong box</string>

    <string name="title_activity_sdas">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="title_activity_caregiver">CaregiverActivity</string>
    <string name="title_activity_answered">AnsweredActivity</string>
    <string name="title_activity_questions">QuestionsActivity</string>

</resources>
