<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText android:id="@+id/enter_first_name"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name" />


    <EditText android:id="@+id/enter_last_name"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name" />

    <EditText android:id="@+id/enter_dob"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_dob" />

    <EditText android:id="@+id/enter_loc"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_location" />

    <EditText android:id="@+id/enter_phone_number"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_num" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20px"
        android:text="@string/sign_up"
        android:layout_weight="1"
        android:onClick="register" />

</LinearLayout>
